fix spacing issues

--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ ul {
 }
 .header {
     display: grid;
-    grid-template-rows: repeat(2,fit-content);
+    grid-template-rows: fit-content 1fr;
     grid-template-columns: 1fr 1fr;
     align-items: center;
     background-color: #fff;
@@ -154,6 +154,7 @@ grid-row: 2/3;
     /* width: 350px;
     height: 200px; */
     flex-direction: column;
+    justify-content: space-between;
     /* font-size: 0.65rem; */
     border-left: 10px solid #EAB440;
     box-shadow: 0.3em 0.3em 1em rgba(0,0,0,0.3);
@@ -176,13 +177,12 @@ color: gray;
     background-color: #fff;
   /* font-size: 0.65rem; */
   /* width: 200px; */
-  padding: 20px 20px 20px 20px;
+  padding: 20px;
   /* height: fit-content; */
   margin-bottom: 40px;
 }
 
 .announcements li {
-    margin-bottom: 20px;
     border-bottom: 1px solid black;
     padding: 20px;
 }
